# mpump

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  app.html  browser-groovebox.html  index.html  landing.html  live-jam-live-set.html  manifest.json  pyproject.toml  research-audioworklet-gc.md  robots.txt  sw.js  version.json
.github/: FUNDING.yml
assets/: index--GdiLhiE.js  index-1vQzYCdK.js  index-2O6F_0La.js  index-3FDDKnG9.js  index-4bix6fiC.js  index-4rFL-a6p.js  index-5iGrcVan.js  index-6XzMnXHK.js  index-936ra5ek.js  index-9lFwPNEr.css  index-B0aEN3-x.js  index-B0pyATX5.js  index-B3Ef5eon.js  index-B4__36Pl.css  index-B6b6_Rwf.js  index-B7hFLkCF.js  index-B86dfc-n.js  index-B8Hv8QYE.js  index-B9iUs1IL.js  index-BAaVOTj5.js  index-BB4G_dJ7.js  index-BBX4eQSy.js  index-BCQtEKjT.js  index-BDE9QGjg.css  index-BDbw5LWb.js  index-BH3QPOGi.js  index-BHIjr4Y5.js  index-BKSOwfeR.js  index-BRTpl4Bv.js  index-BVS2rkJy.js  index-BVmz6QQL.js  index-BbrYCnBo.js  index-BdJWgdbg.js  index-BgVPohA8.js  index-BhImfKZC.js  index-Bi7zluEe.js  index-BkS7qNFs.js  index-BkzD-7vS.css  index-BmQxj_Vd.js  index-BpVIXe8X.js  (+91 more)
data/: catalog.json  featured.json  patterns-t8-bass.json  patterns-t8-drums.json
docs/: 01-interface.md  02-sound-engine.md  03-patterns-and-devices.md  04-sharing-and-sessions.md  05-advanced-features.md  06-live-jam.md  07-drum-tuning.md  08-pattern-generation.md  09-sound-library.md  10-engine-stability.md  README.md  SEO-AUDIT.md  architecture.md  genre-mix-profiles.md  sound-reference.md  user-guide.md
link-bridge/: README.md  package-lock.json  (+1 more)
(+216 files in other folders)
