[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpump"
version = "1.3.11"
description = "MIDI sequencer for USB hardware — runs in the browser or from the command line"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-only" }
keywords = ["midi", "sequencer", "synth", "drums", "music"]
dependencies = [
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "textual>=0.47.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
mpump = "mpump.cli:main"
mpump-web = "mpump.web.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mpump*"]

[tool.setuptools.package-data]
"mpump.frontend" = ["dist/**/*"]
